--- a/day12/pandas学习/10 数据连接.ipynb
+++ b/day12/pandas学习/10 数据连接.ipynb
@@ -860,7 +860,12 @@
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "df_obj1 = pd.DataFrame({'key': ['b', 'b', 'a', 'c', 'a', 'a', 'b'],\n",
+    "                        'data1' : np.random.randint(0,10,7)})\n",
+    "df_obj2 = pd.DataFrame({'data2' : np.random.randint(0,10,3)}, index=['a', 'b', 'd'])\n",
+    "pd.merge(df_obj2, df_obj1, left_index=True, right_on='key')"
+   ],
    "id": "edb35f6354ef5d7",
    "outputs": [
     {
