--- a/day14/1-特征工程.ipynb
+++ b/day14/1-特征工程.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-05T14:55:09.200630Z",
-     "start_time": "2025-05-05T14:55:06.261730Z"
+     "end_time": "2025-05-08T10:08:11.178113Z",
+     "start_time": "2025-05-08T10:08:08.232217Z"
     }
    },
    "source": [
@@ -655,8 +655,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T10:24:32.933625Z",
-     "start_time": "2025-05-06T10:24:31.623680Z"
+     "end_time": "2025-05-08T10:08:16.827768Z",
+     "start_time": "2025-05-08T10:08:16.818889Z"
     }
    },
    "cell_type": "code",
@@ -689,23 +689,12 @@
      "text": [
       "[[2 0]\n",
       " [1 4]\n",
-      " [1 1]]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mIndexError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[32]\u001B[39m\u001B[32m, line 20\u001B[39m\n\u001B[32m     16\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m'\u001B[39m\u001B[33mThe surport is \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m'\u001B[39m % var.get_support(\u001B[38;5;28;01mTrue\u001B[39;00m))\n\u001B[32m     17\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m20\u001B[39m \u001B[43mvar\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[32]\u001B[39m\u001B[32m, line 14\u001B[39m, in \u001B[36mvar\u001B[39m\u001B[34m()\u001B[39m\n\u001B[32m      9\u001B[39m data = var.fit_transform([[\u001B[32m0\u001B[39m, \u001B[32m2\u001B[39m, \u001B[32m0\u001B[39m, \u001B[32m3\u001B[39m],\n\u001B[32m     10\u001B[39m                           [\u001B[32m0\u001B[39m, \u001B[32m1\u001B[39m, \u001B[32m4\u001B[39m, \u001B[32m3\u001B[39m],\n\u001B[32m     11\u001B[39m                           [\u001B[32m0\u001B[39m, \u001B[32m1\u001B[39m, \u001B[32m1\u001B[39m, \u001B[32m3\u001B[39m]])\n\u001B[32m     13\u001B[39m \u001B[38;5;28mprint\u001B[39m(data)\n\u001B[32m---> \u001B[39m\u001B[32m14\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mdata\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[32;43m0\u001B[39;49m\u001B[43m,\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m]\u001B[49m)\n\u001B[32m     15\u001B[39m \u001B[38;5;66;03m# 获得剩余的特征的列编号\u001B[39;00m\n\u001B[32m     16\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m'\u001B[39m\u001B[33mThe surport is \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m'\u001B[39m % var.get_support(\u001B[38;5;28;01mTrue\u001B[39;00m))\n",
-      "\u001B[31mIndexError\u001B[39m: too many indices for array: array is 2-dimensional, but 3 were indexed"
+      " [1 1]]\n",
+      "The surport is [1 2]\n"
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 2
   },
   {
    "metadata": {
