--- a/day14/2-机器学习算法.ipynb
+++ b/day14/2-机器学习算法.ipynb
@@ -2206,11 +2206,614 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 调超参的方法，网格搜索",
+   "id": "36edac0712465571"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T11:54:24.728579Z",
+     "start_time": "2025-05-09T11:54:19.750145Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#网格搜索时讲解\n",
+    "# # 构造一些参数（超参）的值进行搜索\n",
+    "# uniform是考虑距离\n",
+    "# uniform\t直接投票：A(2票) vs B(1票)\t\n",
+    "# distance\t加权投票：A(1/1 + 1/3=1.33) > B(1/2=0.5)\n",
+    "param = {\"n_neighbors\": [3, 5, 10, 12, 15],'weights':['uniform', 'distance']}\n",
+    "\n",
+    "# 进行网格搜索，cv=3是3折交叉验证，用其中2折训练，1折验证\n",
+    "gc = GridSearchCV(knn, param_grid=param, cv=3)\n",
+    "\n",
+    "gc.fit(x_train, y_train)  #你给它的x_train，它又分为训练集，验证集\n",
+    "\n",
+    "# 预测准确率，为了给大家看看\n",
+    "print(\"在测试集上准确率：\", gc.score(x_test, y_test))\n",
+    "\n",
+    "print(\"在交叉验证当中最好的结果：\", gc.best_score_) #最好的结果\n",
+    "\n",
+    "print(\"选择最好的模型是：\", gc.best_estimator_) #最好的模型,告诉你用了哪些参数\n",
+    "\n",
+    "print(\"每个超参数每次交叉验证的结果：\")\n",
+    "gc.cv_results_"
+   ],
+   "id": "47d3dcdcb5cef62b",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:805: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=3.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "在测试集上准确率： 0.49763593380614657\n",
+      "在交叉验证当中最好的结果： 0.4816362349278435\n",
+      "选择最好的模型是： KNeighborsClassifier(n_neighbors=12, weights='distance')\n",
+      "每个超参数每次交叉验证的结果：\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mean_fit_time': array([0.01878587, 0.00900785, 0.01233641, 0.01218708, 0.01433436,\n",
+       "        0.00999602, 0.00887696, 0.00933599, 0.00800125, 0.00800101]),\n",
+       " 'std_fit_time': array([1.59688077e-02, 1.20274763e-05, 1.69714705e-03, 1.66782399e-03,\n",
+       "        1.23441030e-03, 2.82833462e-03, 6.74615957e-04, 1.25089212e-03,\n",
+       "        5.55514721e-06, 2.65015475e-06]),\n",
+       " 'mean_score_time': array([0.16636395, 0.05923406, 0.23212663, 0.08556271, 0.27104282,\n",
+       "        0.08147152, 0.17997289, 0.09253295, 0.18457015, 0.09795562]),\n",
+       " 'std_score_time': array([0.01859669, 0.00660515, 0.01717608, 0.00891144, 0.0018389 ,\n",
+       "        0.00558234, 0.00158238, 0.00222872, 0.00107326, 0.00123053]),\n",
+       " 'param_n_neighbors': masked_array(data=[3, 3, 5, 5, 10, 10, 12, 12, 15, 15],\n",
+       "              mask=[False, False, False, False, False, False, False, False,\n",
+       "                    False, False],\n",
+       "        fill_value=999999),\n",
+       " 'param_weights': masked_array(data=['uniform', 'distance', 'uniform', 'distance',\n",
+       "                    'uniform', 'distance', 'uniform', 'distance',\n",
+       "                    'uniform', 'distance'],\n",
+       "              mask=[False, False, False, False, False, False, False, False,\n",
+       "                    False, False],\n",
+       "        fill_value=np.str_('?'),\n",
+       "             dtype=object),\n",
+       " 'params': [{'n_neighbors': 3, 'weights': 'uniform'},\n",
+       "  {'n_neighbors': 3, 'weights': 'distance'},\n",
+       "  {'n_neighbors': 5, 'weights': 'uniform'},\n",
+       "  {'n_neighbors': 5, 'weights': 'distance'},\n",
+       "  {'n_neighbors': 10, 'weights': 'uniform'},\n",
+       "  {'n_neighbors': 10, 'weights': 'distance'},\n",
+       "  {'n_neighbors': 12, 'weights': 'uniform'},\n",
+       "  {'n_neighbors': 12, 'weights': 'distance'},\n",
+       "  {'n_neighbors': 15, 'weights': 'uniform'},\n",
+       "  {'n_neighbors': 15, 'weights': 'distance'}],\n",
+       " 'split0_test_score': array([0.44468085, 0.4534279 , 0.4607565 , 0.47399527, 0.46170213,\n",
+       "        0.48014184, 0.45650118, 0.48108747, 0.45508274, 0.47895981]),\n",
+       " 'split1_test_score': array([0.43390873, 0.4542445 , 0.45660913, 0.47528967, 0.45542681,\n",
+       "        0.48238354, 0.45329865, 0.48049184, 0.44809648, 0.47623552]),\n",
+       " 'split2_test_score': array([0.43982029, 0.4561362 , 0.45684559, 0.47221565, 0.4618113 ,\n",
+       "        0.48191062, 0.45897375, 0.48332939, 0.46062899, 0.48049184]),\n",
+       " 'mean_test_score': array([0.43946996, 0.45460287, 0.45807041, 0.47383353, 0.45964675,\n",
+       "        0.48147867, 0.45625786, 0.48163623, 0.45460274, 0.47856239]),\n",
+       " 'std_test_score': array([0.00440467, 0.00113433, 0.00190181, 0.00126016, 0.00298428,\n",
+       "        0.00096479, 0.00232323, 0.00122169, 0.00512762, 0.00176021]),\n",
+       " 'rank_test_score': array([10,  8,  6,  4,  5,  2,  7,  1,  9,  3], dtype=int32)}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 73
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T11:59:41.244628Z",
+     "start_time": "2025-05-09T11:59:41.235267Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "(0.48108747 +  0.48049184 + 0.48332939) / 3",
+   "id": "60bacd30365e0db7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48163623333333333"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 74
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:12:41.022383Z",
+     "start_time": "2025-05-09T14:12:40.587188Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "news = fetch_20newsgroups(subset='all', data_home='../python_ml/data')\n",
+    "print(len(news.data))\n",
+    "print('-'*50)\n",
+    "print(news.data[0]) #第一个样本 特征\n",
+    "print('-'*50)\n",
+    "print(news.target) #标签\n",
+    "print(np.unique(news.target)) #标签的类别\n",
+    "print(news.target_names) #标签的名字\n"
+   ],
+   "id": "e33bbe280d54b5c6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18846\n",
+      "--------------------------------------------------\n",
+      "From: Mamatha Devineni Ratnam <mr47+@andrew.cmu.edu>\n",
+      "Subject: Pens fans reactions\n",
+      "Organization: Post Office, Carnegie Mellon, Pittsburgh, PA\n",
+      "Lines: 12\n",
+      "NNTP-Posting-Host: po4.andrew.cmu.edu\n",
+      "\n",
+      "\n",
+      "\n",
+      "I am sure some bashers of Pens fans are pretty confused about the lack\n",
+      "of any kind of posts about the recent Pens massacre of the Devils. Actually,\n",
+      "I am  bit puzzled too and a bit relieved. However, I am going to put an end\n",
+      "to non-PIttsburghers' relief with a bit of praise for the Pens. Man, they\n",
+      "are killing those Devils worse than I thought. Jagr just showed you why\n",
+      "he is much better than his regular season stats. He is also a lot\n",
+      "fo fun to watch in the playoffs. Bowman should let JAgr have a lot of\n",
+      "fun in the next couple of games since the Pens are going to beat the pulp out of Jersey anyway. I was very disappointed not to see the Islanders lose the final\n",
+      "regular season game.          PENS RULE!!!\n",
+      "\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "[10  3 17 ...  3  1  7]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "['alt.atheism', 'comp.graphics', 'comp.os.ms-windows.misc', 'comp.sys.ibm.pc.hardware', 'comp.sys.mac.hardware', 'comp.windows.x', 'misc.forsale', 'rec.autos', 'rec.motorcycles', 'rec.sport.baseball', 'rec.sport.hockey', 'sci.crypt', 'sci.electronics', 'sci.med', 'sci.space', 'soc.religion.christian', 'talk.politics.guns', 'talk.politics.mideast', 'talk.politics.misc', 'talk.religion.misc']\n"
+     ]
+    }
+   ],
+   "execution_count": 75
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:15:20.448488Z",
+     "start_time": "2025-05-09T14:15:13.581604Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print('-'*50)\n",
+    "# 进行数据分割\n",
+    "x_train, x_test, y_train, y_test = train_test_split(news.data, news.target, test_size=0.25, random_state=1)\n",
+    "\n",
+    "# 对数据集进行特征抽取\n",
+    "tf = TfidfVectorizer()\n",
+    "\n",
+    "# 以训练集当中的词的列表进行每篇文章重要性统计['a','b','c','d']\n",
+    "x_train = tf.fit_transform(x_train)\n",
+    "#针对特征内容，可以自行打印，下面的打印可以得到特征数目，总计有15万特征\n",
+    "print(len(tf.get_feature_names_out()))\n",
+    "print('-' * 50)\n"
+   ],
+   "id": "14b288bd9dc7b35c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "153196\n",
+      "--------------------------------------------------\n",
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "execution_count": 77
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:16:31.114489Z",
+     "start_time": "2025-05-09T14:16:30.944364Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(tf.get_feature_names_out()[100000])",
+   "id": "73157605cbcbaf9b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "murky\n"
+     ]
+    }
+   ],
+   "execution_count": 78
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:17:47.464102Z",
+     "start_time": "2025-05-09T14:17:47.292323Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import time\n",
+    "start = time.time()\n",
+    "mlt = MultinomialNB(alpha=1.0)\n",
+    "mlt.fit(x_train, y_train)\n",
+    "end = time.time()\n",
+    "end - start"
+   ],
+   "id": "90b1afc56a34017c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16277027130126953"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 79
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:18:54.769349Z",
+     "start_time": "2025-05-09T14:18:53.274933Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x_transform_test = tf.transform(x_test)  #特征数目不发生改变\n",
+    "print(len(tf.get_feature_names_out())) #查看特征数目"
+   ],
+   "id": "effce19d7ac0d019",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153196\n"
+     ]
+    }
+   ],
+   "execution_count": 80
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:31:49.343064Z",
+     "start_time": "2025-05-09T14:31:49.283056Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "start=time.time()\n",
+    "y_predict = mlt.predict(x_transform_test)\n",
+    "\n",
+    "print(\"预测的前面10篇文章类别为：\", y_predict[0:10])\n",
+    "\n",
+    "# 得出准确率,这个是很难提高准确率，为什么呢？\n",
+    "print(\"准确率为：\", mlt.score(x_transform_test, y_test))\n",
+    "end=time.time()\n",
+    "end-start"
+   ],
+   "id": "4cb915b9d7966b24",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "预测的前面10篇文章类别为： [16 19 18  1  9 15  1  2 16 13]\n",
+      "准确率为： 0.8518675721561969\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.053552865982055664"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 81
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:32:07.655443Z",
+     "start_time": "2025-05-09T14:32:07.648184Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#预测的文章数目\n",
+    "len(y_predict)"
+   ],
+   "id": "965e7ff099b9ab84",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4712"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 82
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:33:16.920620Z",
+     "start_time": "2025-05-09T14:33:16.897615Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 目前这个场景我们不需要召回率，support是真实的为那个类别的有多少个样本\n",
+    "print(classification_report(y_test, y_predict,\n",
+    "      target_names=news.target_names))"
+   ],
+   "id": "18a9d3f71301ab89",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          precision    recall  f1-score   support\n",
+      "\n",
+      "             alt.atheism       0.91      0.77      0.83       199\n",
+      "           comp.graphics       0.83      0.79      0.81       242\n",
+      " comp.os.ms-windows.misc       0.89      0.83      0.86       263\n",
+      "comp.sys.ibm.pc.hardware       0.80      0.83      0.81       262\n",
+      "   comp.sys.mac.hardware       0.90      0.88      0.89       234\n",
+      "          comp.windows.x       0.92      0.85      0.88       230\n",
+      "            misc.forsale       0.96      0.67      0.79       257\n",
+      "               rec.autos       0.90      0.87      0.88       265\n",
+      "         rec.motorcycles       0.90      0.95      0.92       251\n",
+      "      rec.sport.baseball       0.89      0.96      0.93       226\n",
+      "        rec.sport.hockey       0.95      0.98      0.96       262\n",
+      "               sci.crypt       0.76      0.97      0.85       257\n",
+      "         sci.electronics       0.84      0.80      0.82       229\n",
+      "                 sci.med       0.97      0.86      0.91       249\n",
+      "               sci.space       0.92      0.96      0.94       256\n",
+      "  soc.religion.christian       0.55      0.98      0.70       243\n",
+      "      talk.politics.guns       0.76      0.96      0.85       234\n",
+      "   talk.politics.mideast       0.93      0.99      0.96       224\n",
+      "      talk.politics.misc       0.98      0.56      0.72       197\n",
+      "      talk.religion.misc       0.97      0.26      0.41       132\n",
+      "\n",
+      "                accuracy                           0.85      4712\n",
+      "               macro avg       0.88      0.84      0.84      4712\n",
+      "            weighted avg       0.87      0.85      0.85      4712\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 83
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:37:25.416255Z",
+     "start_time": "2025-05-09T14:37:25.410255Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "y_test.shape #测试集中有多少 样本",
+   "id": "f49a2d7f777aad65",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4712,)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 84
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:38:25.513172Z",
+     "start_time": "2025-05-09T14:38:25.507955Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "y_test1 = np.where(y_test == 0, 1, 0)\n",
+    "print(y_test1.sum())"
+   ],
+   "id": "6b3585cfe8847577",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199\n"
+     ]
+    }
+   ],
+   "execution_count": 85
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:39:30.280196Z",
+     "start_time": "2025-05-09T14:39:30.275220Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "y_predict1 = np.where(y_predict == 0, 1, 0)\n",
+    "print(y_predict1.sum())"
+   ],
+   "id": "4dba1824087dbe8e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "168\n"
+     ]
+    }
+   ],
+   "execution_count": 86
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:39:46.109028Z",
+     "start_time": "2025-05-09T14:39:46.103026Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "(y_test1*y_predict1).sum()",
+   "id": "3f75ef7cc26f7a30",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(153)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 87
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:40:35.522717Z",
+     "start_time": "2025-05-09T14:40:35.516739Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "153/168 # 精确率",
+   "id": "8bcf0915536bb546",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9107142857142857"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 88
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T14:40:51.867408Z",
+     "start_time": "2025-05-09T14:40:51.863141Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "153/199 # 召回率",
+   "id": "26a3b88274510e0c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7688442211055276"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 89
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T15:01:14.154811Z",
+     "start_time": "2025-05-09T15:01:14.104276Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 把0-19总计20个分类，变为0和1\n",
+    "# 5是可以改为0到19的\n",
+    "y_test1 = np.where(y_test == 5, 1, 0)\n",
+    "print(y_test1.sum()) #label为5的样本数\n",
+    "y_predict1 = np.where(y_predict == 5, 1, 0)\n",
+    "print(y_predict1.sum())\n",
+    "# roc_auc_score的y_test只能是二分类,针对多分类如何计算AUC\n",
+    "print(\"AUC指标：\", roc_auc_score(y_test1, y_predict1))"
+   ],
+   "id": "7c64917fb98d3958",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n",
+      "214\n",
+      "AUC指标： 0.924078924393225\n"
+     ]
+    }
+   ],
+   "execution_count": 90
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "92af6450c33a1301"
+   "id": "4652b54cec025a6a"
   }
  ],
  "metadata": {
